--- a/app/src/main/res/layout/user_update.xml
+++ b/app/src/main/res/layout/user_update.xml
@@ -24,4 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Update"/>
+    <Button
+        android:id="@+id/Delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete"/>
 </LinearLayout>
