--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -21,4 +21,10 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"/>
 
+    <Button
+        android:id="@+id/plus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+"/>
+
 </LinearLayout>
