--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -2,7 +2,8 @@
 <android.support.v7.widget.CardView android:layout_margin="@dimen/cardview_compat_inset_shadow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -52,6 +53,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:background="@mipmap/pluss"/>
+
 
     <Button
         android:id="@+id/minus"
