--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -52,7 +52,9 @@
         android:layout_height="60dp"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:background="@mipmap/pluss"/>
+        android:background="@drawable/b_plus"
+        android:drawableTop="@android:drawable/ic_input_add"
+        android:paddingTop="15dp"/>
 
 
     <Button
@@ -62,7 +64,10 @@
         android:layout_alignBottom="@id/plus"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:background="@mipmap/minuss"/>
+        android:background="@drawable/b_plus"
+        android:drawableTop="@drawable/ic_remove"
+        android:paddingTop="12dp"
+        android:paddingLeft="10dp"/>
 
 </RelativeLayout>
 </android.support.v7.widget.CardView>
