--- a/app/src/main/res/layout/user_update.xml
+++ b/app/src/main/res/layout/user_update.xml
@@ -2,7 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true">
 
     <EditText
         android:id="@+id/first_name"
@@ -29,4 +31,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Delete"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_points"
+        android:paddingTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
